pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: calculator
spec:
  containers:
    - name: app
      image: saidrandom50/calculator:latest
