svc-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service-nodeport
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: calculator
  type: NodePort
