ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: calculatorapp.com
    http:
      paths:
      - backend:
          service:
            name: calculator-service-nodeport
            port:
              number: 80
        path: /
        pathType: Prefix
